--- a/Projects/Domain/Domain.csproj
+++ b/Projects/Domain/Domain.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="System.DirectoryServices" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Storage\Storage.csproj" />
+  </ItemGroup>
+
 </Project>
