--- a/Projects/StoreUnitTests/StoreUnitTests.csproj
+++ b/Projects/StoreUnitTests/StoreUnitTests.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\NewP0\NewP0.csproj" />
     <ProjectReference Include="..\Storage\Storage.csproj" />
   </ItemGroup>
 
