--- a/Projects/NewP0/p0_API/Properties/launchSettings.json
+++ b/Projects/NewP0/p0_API/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44291",
-      "sslPort": 44366
+      "applicationUrl": "http://localhost:27822",
+      "sslPort": 44341
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SweetnSaltyAPI": {
+    "p0_API": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
